# ForgeHelm

./: .env  .gitignore  Cargo.toml  README.md  index.html  init.sql  notes.md  package-lock.json  package.json
frontend/: App.jsx  index.css  main.jsx
frontend/components/: DashboardContainer.jsx  HeaderContainer.jsx  HomeLayout.jsx  Logo.jsx  MainBodyContainer.jsx  MainBodyToolBarContainer.jsx  NavbarCollapsable.jsx  NavbarLeftContainer.jsx  NavbarLeftLowerItems.jsx  NavbarLeftUpperItems.jsx  RightContainer.jsx  SpreadsheetComponent.jsx  UserLogo.jsx  WorkspaceTools.jsx
migrations/: initial.sql
server/: config.rs  handlers.rs  main.rs  models.rs  routes.rs
server/database/: db.rs  mod.rs  queries.rs
server/models/: mod.rs  models.rs
src/: config.rs  handlers.rs  lib.rs  models.rs  routes.rs
src/config/: mod.rs
src/database/: connection.rs  db.rs  mod.rs  queries.rs
src/handlers/: mod.rs  user_handlers.rs
src/models/: mod.rs  user.rs
src/routes/: mod.rs
src/services/: mod.rs  user_service.rs
src/utils/: errors.rs  mod.rs
