[package]
name = "ForgeHelm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"]}
tokio-postgres = "0.7"
deadpool-postgres = "0.11"
dotenvy = "0.15"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"