[package]
name = "ForgeHelm"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP Server & Routing
actix-web = "4"

# Serve Static Frontend
actix-files = "0.6"

# Enable/Browser-Safe Requests
actix-cors = "0.7"

# (De)serialization
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# async Postgres Client
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"]}
tokio-postgres = "0.7"

# Pool wrapper for tokio-postgres
deadpool-postgres = "0.11"

# Load environment variables from .env
dotenvy = "0.15"

# Error Handling and Logging
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"